# NetSentinel

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_SPEC.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  FILES_CHECKLIST.md  QUICK_START.md  README.md  SECRETS_MIGRATION.md  SUMMARY.txt  TESTING_CHECKLIST.md  TODO.md  deploy.sh  docker-compose.yml
aggregator/: Cargo.toml
aggregator/src/: config.rs  lib.rs  main.rs
aggregator/src/db/: mod.rs
aggregator/src/pipeline/: consumer.rs  mod.rs  persister.rs
aggregator/src/state/: device.rs  flow.rs  mod.rs  protocol.rs
api/: requirements.txt
api/app/: __init__.py  config.py  database.py  main.py
api/app/models/: __init__.py  device.py  flow.py  user.py
api/app/routers/: __init__.py  auth.py  devices.py  flows.py  stats.py
api/app/schemas/: __init__.py  device.py  flow.py  stats.py
capture/: Cargo.toml
capture/src/: config.rs  lib.rs  main.rs
capture/src/capture/: af_packet.rs  frame.rs  interface.rs  mod.rs
capture/src/decode/: ethernet.rs  ipv4.rs  mod.rs  transport.rs  vlan.rs
capture/src/output/: mod.rs  redis.rs
config/: aggregator.docker.toml  aggregator.toml  capture.docker.toml  capture.toml
docker/: docker-compose.dev.yml  nginx.conf
migrations/: 001_initial_schema.sql
secretsloader/: __init__.py
systemd/: netsentinel-aggregator.service  netsentinel-api.service  netsentinel-capture.service
web/: index.html  package.json  tailwind.config.js  vite.config.ts
web/src/api/: index.ts
web/src/assets/: main.css
web/src/layouts/: MainLayout.vue
web/src/router/: index.ts
web/src/stores/: alerts.ts  auth.ts  dashboard.ts  devices.ts  flows.ts
web/src/types/: index.ts
web/src/views/: AlertsView.vue  DashboardView.vue  DeviceDetailView.vue  DevicesView.vue  FlowsView.vue  LoginView.vue  NotFoundView.vue  SettingsView.vue  TopologyView.vue
