[package]
name = "netsentinel-aggregator"
version = "0.1.0"
edition = "2021"
authors = ["SecuAAS <dev@secuaas.com>"]
description = "NetSentinel data aggregation and persistence module"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "streams"] }

# Concurrency
dashmap = "5"
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
toml = "0.8"
config = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }

# Signal handling
ctrlc = "3.4"

# Metrics
prometheus = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
