[package]
name = "netsentinel-capture"
version = "0.1.0"
edition = "2021"
authors = ["SecuAAS <dev@secuaas.com>"]
description = "NetSentinel passive network capture module"
license = "Proprietary"

[dependencies]
# Network capture
pnet = "0.35"
etherparse = "0.15"
libc = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "streams"] }

# Configuration
toml = "0.8"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = ">=0.3.0, <0.3.37"  # Pin to avoid edition2024 requirement

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Signal handling
ctrlc = "3.4"

# Metrics
prometheus = "0.13"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
